trying to get my font colors to render correctly on my ipad with dark mode on

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ h2 {
 }
 
 .text {
+  color: var(--light) !important;
   position: relative;
   top: auto;
   padding: 10% 5% 10% 12%;
