--- a/src/components/aurora/style.css
+++ b/src/components/aurora/style.css
@@ -11,7 +11,6 @@
   height: 100vh;
   width: 80vw;
   background-image: var(--aurora-gradient);
-  box-shadow: 5px 0 5px 5px var(--aurora-gradient);
   position: fixed;
   top: 0;
   background-size: 17% 100vh;
